--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -7,6 +7,10 @@ set(SOURCE_FILES
     st_nonblocking/Connection.cpp
     st_nonblocking/Utils.cpp
 
+    st_coroutine/ServerImpl.cpp
+    st_coroutine/Connection.cpp
+    st_coroutine/Utils.cpp
+
     mt_nonblocking/ServerImpl.cpp
     mt_nonblocking/Connection.cpp
     mt_nonblocking/Worker.cpp
